[package]
name        = "spanda"
version     = "0.1.0"
edition     = "2021"
description = "A general-purpose animation library for Rust — tweening, keyframes, timelines, and physics."
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/aarambh-darshan/spanda"
keywords    = ["animation", "tween", "easing", "keyframe", "gamedev"]
categories  = ["game-development", "graphics", "mathematics", "multimedia"]
readme      = "README.md"

# ── optional features ────────────────────────────────────────────────────────

[features]
default  = ["std"]
std      = []                         # enables std clock, thread-safe driver
serde    = ["dep:serde"]              # Serialize/Deserialize on all public types
bevy     = ["dep:bevy_app", "dep:bevy_ecs", "dep:bevy_time", "std"]
wasm     = ["dep:wasm-bindgen", "dep:js-sys", "std"]
palette  = ["dep:palette"]            # Color interpolation via palette crate
tokio    = ["dep:tokio", "std"]       # async .await on timeline completion

# ── dependencies ──────────────────────────────────────────────────────────────

[dependencies]
serde        = { version = "1",    features = ["derive"], optional = true }
bevy_app     = { version = "0.13", optional = true }
bevy_ecs     = { version = "0.13", optional = true }
bevy_time    = { version = "0.13", optional = true }
wasm-bindgen = { version = "0.2",  optional = true }
js-sys       = { version = "0.3",  optional = true }
palette      = { version = "0.7",  optional = true }
tokio        = { version = "1",    features = ["sync"], optional = true }

[dev-dependencies]
approx    = "0.5"     # float comparison in tests
criterion = "0.5"     # benchmarks

[[bench]]
name    = "easing_bench"
harness = false
